2014-04-04  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_network_components.php: some cleans into the
	source code style.

2014-04-04  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_networkmap.php: fixed the networkmap L2 with
	unknown modules. Thanks Alex.

2014-04-03  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_networkmap.php: fixed the PHP warning.

2014-04-03  Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/module_manager_editor.php,
	godmode/agentes/module_manager_editor_common.php,
	include/ajax/module.php, include/functions_html.php: fixed the
	relationship between modules.

2014-04-03  Ramon Novoa  <rnovoa@artica.es>

	* images/os_icons/so_router.png,
	  images/os_icons/so_router_small.png
	  imagesimages/os_icons/so_switch.png
	  imagesimages/os_icons/so_switch_small.png: Updated icons for generic
	  switches and routers.

2014-04-03  Ramon Novoa  <rnovoa@artica.es>

	* extras/pandoradb_migrate_5.0.x_to_5.1.mysql.sql,
	  extras/pandoradb_migrate_5.0.x_to_5.1.oracle.sql,
	  extras/pandoradb_migrate_5.0.x_to_5.1.postgreSQL.sql: Updated the migration
	  scripts.

2014-04-03  Ramon Novoa  <rnovoa@artica.es>

	* images/networkmap/so_router.png,
	  images/networkmap/so_switch.png,
	  images/os_icons/so_router.png,
	  images/os_icons/so_switch.png: Added to repository. Icons for L2 network
	  maps.

	* pandoradb.sql,
	  ppandoradb_data.sql: Added the Recon SNMP L2 network discovery script.

2014-04-03  Miguel de Dios <miguel.dedios@artica.es>
	
	* operation/agentes/estado_generalagente.php: fixed the $id_agente
	var lost.

2014-04-02  Sergio Martin <sergio.martin@artica.es>

	* include/functions_api.php: Added new API function to validate
	alerts from PagerDuty notification service

2014-04-02  Miguel de Dios <miguel.dedios@artica.es>
	
	* operation/search_results.php, operation/search_users.getdata.php:
	fixed the count of user in the global search main page.
	
	Incident: #710
